--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-warning dropdown-toggle display-7" href="page12.html" data-toggle="dropdown-submenu"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Centers</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-7" href="page12.html">New Item</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-7" href="page10.html" data-toggle="dropdown-submenu"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Patient health info</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-7" href="page10.html">New Item</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-warning display-7" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Medical Professionals</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-7" href="Health science courses.html">New Item</a></div></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-7" href="page10.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Health info</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-7" href="page10.html">New Item</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-warning display-7" href="page6.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Health Professionals</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-7" href="Health science courses.html">New Item</a></div></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-warning dropdown-toggle display-7" href="page4.html" data-toggle="dropdown-submenu"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Education</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-7" href="page4.html">New Item</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-warning dropdown-toggle display-7" href="page12.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a><div class="dropdown-menu"><a class="text-warning dropdown-item display-7" href="page12.html">New Item</a></div></li></ul>
@@ -74,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content5 cid-rRUehq4hv7" id="content5-ld">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-rRUehq4hv7" id="content5-ld">
 
     
 
@@ -199,7 +197,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KZWqd4SvTi1z8ZA2nwdgq4kUi+r9pLNX2Q6j2KRM+DMfmved/BFWs5pYA0kKGLEI6qmvmZ/jIZ44ianSLYrMH8udAypaQxsLdrtYe/hWRrYue0e/LB0Nv12D7FtjpSzH">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pprpJW1mPtWqh4GJqGTWSO+zGWTFMw+71CyzhQzbRCWcH7s6+ygPoWfhBjo2iGtB7ADGVvNxYIggXyj4MA+W1yA/j/JxPeTbQynSiyRsaSi8FNka/uHwmA+m+VCYsgiU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
